# read_it_later_vm

./: .gitignore  .gitlab-ci.yml  README.md  database.drawio  db.drawio  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
deploy/app/: Dockerfile
puppeteer/: consts.js  main.js  package-lock.json  package.json
read_it_later/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/: forms.py  models.py  tasks.py  title_parser.py  urls.py  views.py
web/management/commands/: telegram_bot.py
web/migrations/: 0001_initial.py  0002_user_tg_username_alter_articles_document_file.py  0003_user_token.py  0004_telegramhash_remove_user_tg_username_and_more.py  0005_remove_telegramhash_telegram_user_id_and_more.py  0006_alter_telegramhash_user.py  0007_alter_user_telegram_user_id.py  0008_alter_articles_document_file.py
web/services/: bot.py  save_article.py  user.py
web/static/web/: add_article.css  form.css  login.css  registration.css  user_page.css
web/static/web/ril_frontend/: package-lock.json  package.json
web/static/web/ril_frontend/src/: App.vue  NewApp.vue  consts.js
web/static/web/ril_frontend/src/components/: LoadingIndicator.vue  MyButton.vue
web/templates/web/: add_article.html  base.html  edit.html  form.html  login.html  navbar.html  registration.html  user_page.html
